# any23

./: .asf.yaml  .gitignore  .travis.yml  CHANGES.txt  CONTRIBUTING.md  DISCLAIMER.txt  LICENSE-header.txt  LICENSE.txt  NOTICE.txt  README.MD  README.md  README.txt  RELEASE-HOWTO.txt  RELEASE-NOTES.md  RELEASE-NOTES.txt  deploy-site.sh  pom.xml  settings.xml
.github/: pull_request_template.md
.github/workflows/: master-build.yml
any23-core/: README.txt  RELEASE-NOTES.txt  build.xml  checkstyle.xml  pom.xml
any23-core/lib/: DEPENDENCIES.txt
any23-core/src/main/resources/: default-configuration.properties
any23-core/src/site/: site.xml
any23-core/src/site/apt/: developers.apt  extraction.apt  getting-started.apt  ill-formed-rdfa.apt  index.apt  install.apt
any23-core/webapp/WEB-INF/: web.xml
any23-core/webapp/resources/: form.html
any23-core/webapp/resources/simplePopup/: simplePopup.css
any23-service/: pom.xml
any23-service/src/main/assembly/: assembly.xml
any23-service/src/site/: site.xml
any23-service/src/site/apt/: index.apt
api/: pom.xml
api/src/main/resources/: default-configuration.properties
cli/: pom.xml
cli/src/main/assembly/: LICENSE-with-deps.txt  NOTICE-with-deps.txt  README.txt  bin.xml
cli/src/test/resources/: log4j.properties
core/: README.txt  pom.xml
core/src/main/assembly/: LICENSE-with-deps.txt  NOTICE-with-deps.txt  README.txt  bin.xml
core/src/main/resources/: default-configuration.properties
core/src/test/resources/: log4j.properties
csvutils/: pom.xml
csvutils/src/test/resources/: log4j.properties
encoding/: pom.xml
jacoco-report-aggregate/: pom.xml
lib/: README.txt  install-deps.sh
librdfa-rdf4j/: README.MD  pom.xml
librdfa-rdf4j/src/main/c/: CMakeLists.txt  RdfaParser.cpp  RdfaParser.h  rdfa.i  readme.md
librdfa-rdf4j/src/test/resources/: log4j.properties
mime/: pom.xml
mime/src/test/resources/: log4j.properties
nquads/: pom.xml
nquads/src/test/resources/: log4j.properties
openie/: pom.xml
parent/: pom.xml
plugins/: README.md  README.txt
plugins/basic-crawler/: pom.xml
plugins/html-scraper/: pom.xml
plugins/integration-test/: plugins-integration-test.ipr  pom.xml
plugins/office-scraper/: pom.xml
plugins/openie/: pom.xml
service/: README.md  README.txt  pom.xml
service/src/main/assembly/: LICENSE-server-embedded.txt  LICENSE-with-deps.txt  (+13 more)
sources-dist/: pom.xml
src/changes/: any23-gcode-CHANGES.txt  changes.xml
src/main/assembly/: src.xml
src/main/c/: RdfaParser.cpp  main.java  rdfa.i
src/site/: site.xml
src/site/apt/: acknowledgements.apt  any23-plugins.apt  build-src.apt  configuration.apt  dev-csv-extractor.apt  dev-data-conversion.apt  dev-data-extraction.apt  dev-microdata-extractor.apt  dev-microformat-extractors.apt  dev-validation-fix.apt  dev-xpath-extractor.apt  developers.apt  download.apt  download.apt.vm  extractors.apt  getting-started.apt  ill-formed-rdfa.apt  index.apt  install.apt  install.apt.vm  microformat-extractors.apt  plugin-basic-crawler.apt  plugin-html-scraper.apt  plugin-office-scraper.apt  poweredby.apt  service.apt  supported-formats.apt  xpath-extractor.apt
src/site/xdoc/: download.xml.vm  release-howto.xml
test-resources/: pom.xml
utils/: pom.xml
(+1606 files in other folders)
